--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -5,4 +5,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
+    color: #484848;
+    font-size: 14px;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
