Feat(*): Update up to task 12

--- a/web_static/styles/103-common.css
+++ b/web_static/styles/103-common.css
@@ -5,6 +5,7 @@
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    line-height: 1.5;
 }
 section {
     margin-bottom: 2rem;
