--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,7 +1,12 @@
 * {
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+body {
+    min-height: 100vh;
+    position: relative;
 }
