--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,12 +1,14 @@
 footer {
     background-color: #FFFFFF;
     width: 100%;
-    border-top: 1px solid #CCCCCC;
-    position: relative;
-    bottom: 0px; 
+    height:60px;
 }
 footer > p {
+    border-top: 1px solid #CCCCCC;
     height:60px;
     line-height: 60px;
     text-align: center;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
