--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -28,19 +28,20 @@ body > div > .filters > button:hover {
 .locations, .amenities {
     display: inline-block;
     height: 100%;
-    width: 25%;  
-}
-.locations > h3, .amenities > h3 {
-    font-weight: 600;
-    margin: 0;
-    padding: 7px 0 0 16px;
-}
-.locations > h4, .amenities > h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 0;
-    padding-left: 16px;
+    width: 25%;
 }
 .locations {
     border-right: 1px solid #DDDDDD;
+}
+.filters_title {
+    font-weight: 600;
+    margin: 0;
+    padding-top: 8%;
+    padding-left: 10%;
+}
+.filters_subtitle {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0;
+    padding-left: 10%;
 }
